MOBI-187 stretched the anchor to the width of the screen on android, this fixed a strange xor selection draw for the anchor which was being drawn on top of the focus colour for the list.
git-svn-id: http://anonsvn.icesoft.org/repo/icemobile/trunk/icemobile@28480 1de00972-ac04-4911-a46b-06793c8d78d9

--- a/components/component/src/org/icefaces/mobi/component/list/android/default-list.css
+++ b/components/component/src/org/icefaces/mobi/component/list/android/default-list.css
@@ -29,7 +29,6 @@
     /* 4286F5  194FDB */
     background-color: #F79A21 !important;
     -webkit-tap-highlight-color: #F79A21;
-    color: black !important;
 }
 
 /* list specific  */
@@ -87,6 +86,7 @@
     color: #fff;
     display: block;
     /*margin: -8px 0 -8px -10px;*/
+    width: 100%;
     padding: 15px 25px;
 }
 
